--- a/_items/CS_2025-03-17_001.md
+++ b/_items/CS_2025-03-17_001.md
@@ -2,7 +2,7 @@
 layout: item
 format: photo
 title: "Arresting Charles Kennison"
-contributor: "Drew Heiderscheidt"
+contributor: "History Colorado/Colorado Historical Society"
 group: 
 creator: "Unknown"
 externalurl: 
