--- a/_items/CS_2025-02-17_001.md
+++ b/_items/CS_2025-02-17_001.md
@@ -5,6 +5,7 @@ title: "Is Colorado in America?"
 contributor: "Drew Heiderscheidt"
 group: 
 creator: "William D. Haywood & the Western Federation of Miners"
+archive-repository: "Denver Public Library, Rare & Distinctive Collections"
 externalurl: 
 embedurl: 
 creationdate: "1903"
