--- a/_items/CS_2025-03-17_001.md
+++ b/_items/CS_2025-03-17_001.md
@@ -5,6 +5,7 @@ title: "Arresting Charles Kennison"
 contributor: "History Colorado/Colorado Historical Society"
 group: 
 creator: "Unknown"
+archive-repository: "History Colorado/Colorado Historical Society"
 externalurl: 
 embedurl: 
 creationdate: "1903"
